--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+@import './config-scss/animation.scss';
+@import './config-scss/btn.scss';
+@import './config-scss/rem-calc.scss';
+@import './config-scss/resset.scss';
+@import './config-scss/variable.scss';
+
+html {
+  font-family: 'Roboto', sans-serif;
+  background-color: var(--primary-color);
+}
+
+main {
+  width: rem-calc(600);
+  margin: 0 auto;
+  box-sizing: border-box;
+}
