--- a/src/app/shared/poke-search/poke-search.component.html
+++ b/src/app/shared/poke-search/poke-search.component.html
@@ -1,10 +1,10 @@
-<!-- <form class="content">
-  <input type="text" #input (keyup)="search(input.value)" placeholder="Buscar Pokemon ...">
-    <img src="../../../assets/icons/search.svg" alt="Buscar Pokemon">
-</form> -->
-<mat-form-field class="content">
-  <mat-label>Selecione um pokemon</mat-label>
-  <mat-select [(value)]="selectedPokemon">
-    <mat-option *ngFor="let option of options" [value]="option.value">{{ option.viewValue }}</mat-option>
-  </mat-select>
-</mat-form-field>
+<form>
+  <mat-form-field class="content">
+    <mat-label>Selecione um pokemon</mat-label>
+    <mat-select (selectionChange)="search($event.value)">
+      <mat-option *ngFor="let option of options" [value]="option.value">{{
+        option.viewValue
+      }}</mat-option>
+    </mat-select>
+  </mat-form-field>
+</form>
